<resources>
    <string name="app_name">SeeYa</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="nextBtn">Next</string>
    <string name="okBtn">OK</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="searchText">Search</string>
    <string name="favourite">Favourite</string>
    <string name="location">Location</string>
    <string name="sports">Sports</string>
    <string name="loginBtn">Login</string>
    <string name="btnRegister">Register</string>
    <string name="viewCreated">View created activities</string>
    <string name="createNew">Create New activity</string>
    <string name="create">CREATE</string>
    <string name="group">GROUP</string>
    <string name="goToBrowseActivities">Browse Activities</string>
</resources>
