<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f2f2f2"
    >
    <TextView
        android:text = "What would you like to do?"
        android:id= "@+id/activityChoice"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:paddingLeft="50dp"
        android:textSize="20sp"
        android:typeface="serif"

        />


    <Button
        android:id="@+id/btnGoToOwnActivitiesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewCreated"
        android:background="@drawable/rounded_green_rectangle"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/activityChoice"
        android:textSize="20sp"
        android:typeface="serif"

        />

    <Button
        android:id="@+id/btnGoToCreatePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createNew"
        android:background="@drawable/rounded_green_rectangle"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/btnGoToOwnActivitiesList"
        android:textSize="20sp"
        android:typeface="serif"
        />

    <Button
        android:id="@+id/btnGoToBrowseActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToBrowseActivities"
        android:background="@drawable/rounded_green_rectangle"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/btnGoToCreatePage"
        android:textSize="20sp"
        android:typeface="serif"
        />


</RelativeLayout>
