<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f2f2f2"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUp"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:typeface="serif"
        android:background="@drawable/rounded_green_rectangle"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="100dp"
        android:paddingRight="130dp"


        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="15"
        android:id="@+id/txtregusername"
        android:textColor="@color/darkerGray"
        android:text="@string/username"
        android:padding="10dp"
        android:singleLine="true"
        android:background="@drawable/rounded_white_rectangle"
        android:layout_below="@+id/signUp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtregpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="@color/darkerGray"
        android:ems="15"
        android:padding="10dp"
        android:singleLine="true"
        android:background="@drawable/rounded_white_rectangle"
        android:layout_below="@+id/txtregusername"
        android:layout_marginTop="55dp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/txtregemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="email"
        android:drawablePadding="8dp"

        android:inputType="textEmailAddress"
        android:ems="15"
        android:textColor="@color/darkerGray"
        android:text="@string/email"
        android:padding="10dp"
        android:singleLine="true"
        android:background="@drawable/rounded_white_rectangle"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/txtregpassword"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"

        android:textSize="32sp"
        android:typeface="serif"
        android:layout_marginBottom="71dp"
        android:background= "@drawable/rounded_green_rectangle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>
